test/chainsaw/securityconfig/ansattporten/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: security-config-ansattporten-301747d4
  labels:
    accesserator.kartverket.no/controller: securityconfig
    app.kubernetes.io/managed-by: accesserator
spec:
  exportTo:
    - .
  hosts:
    - test.ansattporten.no
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
